--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
-<!DOCTYPE html>
-
+<!DOCTYPE.html>
 
 <html lang="pt-br">
 
-
-
-<head>
-
-<meta charset="UTF-8">
-
-    <title>trabalho interdisciplinar</title>
-
-  
+</htm>
 
     <style> 
 
 p {
 
-	text-align:justify; 
+text-align:justify; 
 
-	text-indent: 50px;
+text-indent: 50px;
 
 }
 
+
+
 h1 {
 
-	font-family: Arial;
+font-family: Arial;
 
-	font-size: 30pt;
+font-size: 30pt;
 
-	text-shadow: 2pt 2pt 2pt black;
+text-shadow: 2pt 2pt 2pt black;
 
 }
 
@@ -37,44 +30,64 @@ h1 {
 
  </head>
 
+
+
  <body bgcolor="gray" > 
 
 <div id=interface>
 
+
+
 <header id="cabeçalho">
+
 
 
 <hgroup>
 
-	<h1 style= "text-align:center; font-family: Arial;
+<h1 style= "text-align:center; font-family: Arial;
 
-	font-size: 30pt;
+font-size: 30pt;
 
-	color: blue;
+color: blue;
 
-	text-shadow: 2pt 2pt 2pt black;">Idade Média</h1>
+text-shadow: 2pt 2pt 2pt black;">Idade Média</h1>
 
-	<h3 align="right">ICamila Dutra
 
-<p>Leandra dos Santos</p></h3>
 
-	<h2>As Primeiras Universidades.</h2>
+<h3 align="right">Camila Dutra
 
-	<p>Na idade média já existia formas de estudo as pessoas que queriam se aprofundar mais nos assuntos seguiam “mestres” que acompanhavam aquela área, então existiam várias formas de transmitir o conhecimento na idade média.</p>
+<br/>Leandra dos Santos</h3>
 
-	<p>Mas chega um momento no século 11 ou 12 essa forma de obter conhecimento  orgânico de mais, individual muita restrita, ela acaba sendo insuficiente para as demandas daquele tempo.Que é um tempo de grande desenvolvimento por exemplo.</p>
 
-	<p> </p>
 
-<center> <img src="inquisicao.png" > </center><br>
+<h2>As Primeiras Universidades.</h2>
 
-<p>As Cruzadas ocorreram do século XI ao século XII e mobilizaram tropas cristãs contra os muçulmanos, na Palestina e no norte da África. Ao todo foram nove cruzadas, sendo a primeira delas convocada pelo <strong>Papa Urbano II</strong>, em 1095. A nona Cruzada foi encerrada em 1272, e o objetivo inicial dos cristãos (conquistar Jerusalém) não foi alcançado.</p>
+<center> <img src="universidades.jpg" > </center><br>
 
-<p>Outros destaques que podem ser feitos sobre a Idade Média são o Império Bizantino e o estabelecimento da Inquisição. Assuntos também relevantes são a cultura e a ciência medievais, geralmente pouco estudadas.</p>
+<p>Na idade média já existia formas de estudo as pessoas que queriam se aprofundar mais nos assuntos seguiam “mestres” que acompanhavam aquela área, então existiam várias formas de transmitir o conhecimento na idade média.</p>
+
+
+
+<p>Mas chega um momento no século 11 ou 12 essa forma de obter conhecimento  orgânico de mais, individual muita restrita, ela acaba sendo insuficiente para as demandas daquele tempo.Que é um tempo de grande desenvolvimento por exemplo.</p>
+
+
+
+<p>Nesse tempo estavam precisando de mais pessoas formadas, principalmente em direito. Vamos supor que você precisa de um “mestre” que te estrua, mas ás vezes vezes os mestres estão muito longe dos estudantes.</p>
+
+
+
+<center> <img src="faculdade.webp" > </center><br>
+
+<p>Por ser muito complicado essa forma de estudo as pessoas começaram a se unir na Itália principalmente os estudantes para negociar com os poderes locais, para conseguir contratar os mestres e ter uma qualidade de estudo. Então de todo esse movimento começaram a surgir corporações de estudantes e mestres, é dai que vem a palavra universidade.</p>
+
+
 
 </header>
 
- </div>	 
+
+
+ </div>  
 
 </body>
+
 </html>
